--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <div id="cover-body">
   </div>
-  <main>
+  <main class="grid-container">
     <h3>My Library</h3>
-    <div id="library-display">
+    <div id="library-display" class="flex-container">
       <div id="control-library">
         <button id="add-button">New Book</button>
         <div id="add-book-container" class="flex-container">
